--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "electron": "^29.2.0",
-    "onoff": "^6.0.3"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "electron-rebuild": "^3.2.9"
